--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,8 @@ dmypy.json
 homepage/.DS_Store
 homepage/static/.DS_Store
 homepage/static/assets/.DS_Store
+
+#
+.DS_Store
+homepage/static/assets/.DS_Store
+homepage/.DS_Store
